# q4p

./: CONTRIBUTING.md  README.md  plotly_nbsanity_test_notebook.ipynb  pyproject.toml  resources.md
basics_nbs/: complex.ipynb
nbs/: 0-why.ipynb  00-why.ipynb  00b-high-level.ipynb  00b-marbles.ipynb  01-the-qubit.ipynb  02-gates.ipynb  03-multi.ipynb  04-deutsch.ipynb  05-grover.ipynb  06-shor.ipynb  06-simon.ipynb  07-error.ipynb  08-cloud.ipynb  09-opt.ipynb  1-the-qubit.ipynb  10-ml.ipynb  11-info.ipynb  2-gates.ipynb  9999-resources.ipynb  resources.ipynb
