[project]
name = "q4p"
version = "0.1.0"
description = "Quantum Computing for Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.2",
    "plotly>=5.24.1",
    "kaleido==0.2.1",
    "skq>=0.1.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.8",
]

[tool.ruff]
line-length = 300
exclude = ["nbs"]

[tool.ruff.lint]
ignore = ["E741", "F401", "F403", "F405", "F811"]
